--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "mongoose": "^5.4.10",
     "multer": "^1.4.1",
     "nodemailer": "^5.1.1",
-    "nodemon": "^1.18.11"
+    "nodemon": "*"
   }
 }
